# wifi-connect

./: API_Endpoints_Documentation.md  CLAUDE.md  Cargo.toml  Dockerfile.template  README.md  README_WIFI_API.md  config.py  config_util.py  example_config.json  index.html  newindex.html  requirements.txt  sleep.sh  start.sh  test_api.py  wifi_api_server.py  wifi_api_server.service  wifi_api_server.spec  wifi_config.json  wipe_networks.py
.github/workflows/: build-and-dispatch.yml  build.yml  create-mender-artifect.yml
data/: wifi_config.json
docs/: command-line-arguments.md  wifi-direct.md  wpa_supplicant_p2p.conf
scripts/: .start.sh.swp  api.py  block-peers.sh  setup-wifi-direct.sh  start.sh
src/: config.rs  dnsmasq.rs  errors.rs  exit.rs  hotspot_manager.rs  main.rs  network.rs  server.rs  wifi_direct.rs
ui/: CLAUDE.md
ui/public/: test-kioskboard.html
ui/public/static/css/: front.css  style.css
ui/public/static/js/: keyboard.js  kioskboard-aio-2.3.0.min.js  kioskboard-aio.min.js  script.js
